# Argus

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml
scripts/: build_linux.sh  build_mac.sh  build_win.bat
src/argus/: exceptions.py  logger.py  main.py
src/argus/Api/: api_client.py
src/argus/api/: api_client.py  auth.py
src/argus/assets/: icon.icns
src/argus/filemanager/: file_manager.py
src/argus/mousetracking/: clicktracker.py
src/argus/screenshot/: capture.py
src/argus/time_tracking/: tracker.py
src/argus/timetracker/: time_tracker.py
src/argus/ui/: auth_window.py  login_window.py  main_window.py  register_window.py
src/argus/utils/: utils.py
